fix spacing for navbar icons

--- a/app/BigComponents/NavBar/navbar.module.css
+++ b/app/BigComponents/NavBar/navbar.module.css
@@ -51,7 +51,11 @@
     color: white;
 }
 
-.icons {
+.search {
+    margin-right: -14px;
+}
+
+.search, .profile {
     display: flex;
     align-items: center;
     margin-top: 40px;
